--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "coffee-script": "1.6.3",
-    "irc": "0.3.6"
+    "irc": "0.3.6",
+    "cron": "1.0.3"
   }
 }
