--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "marvin",
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "dependencies": {
     "coffee-script": "1.6.3",
     "irc": "0.3.6",
     "cron": "1.0.3"
+  },
+  "subdomain": "marvin",
+  "scripts": {
+    "start": "coffee marvin.coffee"
+  },
+  "engines": {
+    "node": "0.10.17"
   }
 }
