--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "marvin",
-  "version": "0.0.1-1",
+  "version": "0.0.1-2",
   "dependencies": {
     "coffee-script": "1.6.3",
     "irc": "0.3.6",
-    "cron": "1.0.3"
+    "cron": "1.0.3",
+    "time": "0.8.0"
   },
   "subdomain": "marvin",
   "scripts": {
     "start": "coffee marvin.coffee"
   },
   "engines": {
-    "node": "0.10.17"
+    "node": "0.10.x"
   }
 }
