initial commit for blackjack

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "coffee-script": "1.6.3",
     "irc": "0.3.6",
     "cron": "1.0.3",
-    "time": "0.8.0"
+    "time": "0.8.0",
+    "knuth-shuffle": "1.0.0"
   },
   "subdomain": "marvin",
   "scripts": {
-    "start": "coffee marvin.coffee"
+    "start": "coffee app.coffee"
   },
   "engines": {
     "node": "0.10.x"
